Fix issue with switch expressions in Java 25